# kenya-emergency-api

./: .env.example  .gitignore  CONTRIBUTING.md  DATA_PROVENANCE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml
data/snapshots/: counties_v1.json  national_emergency_numbers_v1.json  poison_control_v1.json
examples/: 01_python_client.py  02_running_the_api.py  03_curl_examples.sh  04_integration_pattern.md  README.md
scripts/: build_db.py
src/kenya_emergency/: __init__.py  client.py
src/kenya_emergency/api/: __init__.py  app.py  dependencies.py  error_handlers.py  middleware.py
src/kenya_emergency/api/routes/: __init__.py  counties.py  emergency.py  health.py  poison.py
src/kenya_emergency/core/: __init__.py  config.py  exceptions.py  logging.py
src/kenya_emergency/models/: __init__.py  county.py  emergency_contact.py  national_number.py  overview.py  phone.py  poison_control.py  provenance.py
src/kenya_emergency/services/: __init__.py  _normalize.py  emergency_service.py
src/kenya_emergency/storage/: __init__.py  _serde.py  base.py  builder.py  schema.py  sqlite_adapter.py  supabase_adapter.py
tests/: conftest.py
tests/data/snapshots/: counties_v1.json  emergency_contacts_v1.json  national_emergency_numbers_v1.json  poison_control_v1.json
tests/integration/: test_api_routes.py  test_service_e2e.py  test_storage_roundtrip.py
tests/unit/: test_county.py  test_emergency_contact.py  test_emergency_service.py  test_middleware.py  test_national_number.py  test_phone.py  test_poison_control.py  test_provenance.py  test_sqlite_adapter.py  test_storage_builder.py
